1.2.0-devel unreleased
======================

 * Changed criteria definitions to use Zope3 Messages for localizing
   descriptions and labels instead of the old Archetypes approach using special
   attributes. Added a ATCTMessageFactory for the Messages in the
   'atcontenttypes' i18n domain.
   [hannosch]

 * Fixed some imports of transaction_note from CMFPlone to CMFPlone.utils.
   [hannosch] 

 * Fixed deprecation warnings for TALValidator.
   [hannosch] 

 * Changed type definitions to use Zope3 Messages for localizing descriptions
   and labels instead of the old Archetypes approach using special attributes.
   [hannosch]  

 * Adjusted some deprecated getActionById to getActionInfo calls.
   [hannosch]

 * Removed five:traversable statements as they are no longer needed in Zope2.10.
   [hannosch]

 * Simplified test setup and adjusted some tests accordingly.
   [hannosch]

 * Adjusted import locations of Archetypes.public to Archetypes.atapi for AT1.5.
   [hannosch]

1.1.2-final unreleased
======================

 * Don't setup a 'ATCT Setup' control panel category anymore, it's not used.
   [hannosch]

1.1.1-final 2006-06-08
======================

 * Changed two logging.PROBLEM to logging.WARNING. PROBLEM level was zLOG only.
   [hannosch]

1.1.0-final 2006-06-03
======================

 * Added TextIndexNG3 to list of indexes.
   [ajung]

 * Moved css rules for the photo album view inside Plone's public.css, instead
   of having them inline in the template. This way they can be overridden.
   This closes http://dev.plone.org/plone/ticket/4765.
   [hannosch]

 * Made ATTopic queryCatalog properly support b_size, thanks to patch from
   Bader.  Fixes http://dev.plone.org/plone/ticket/5526
   [alecm]

 * Removed the unused locales folder. Translation files are part of the
   PloneTranslation product.
   [hannosch]

 * Uploading HTML via WebDAV now supports reading <title> tag to use
   as the title of the new content item.