@@ -68,15 +68,14 @@
 </table>
 
 <metal:typedescription metal:define-macro="typedescription">
-        <tal:description tal:define="msgid here/typeDescMsgId | nothing;
-                                     default here/typeDescription| nothing;"
-                         tal:condition="default">
+    <tal:description define="description context/typeDescription| nothing;"
+                     condition="description">
 
-          <p tal:content="python:here.translate(msgid=msgid, default=default)">
+        <p tal:content="description" i18n:translate="">
             type description
-          </p>
+        </p>
 
-        </tal:description>
+    </tal:description>
 </metal:typedescription>
 
 </body>
