@@ -6,6 +6,8 @@
 ##bind subpath=traverse_subpath
 ##parameters=
 ##
+from Products.ATContentTypes import ATCTMessageFactory as _
+
 request = context.REQUEST
 indexId=request.get('field')
 criterion_type=request.get('criterion_type')
@@ -16,8 +18,10 @@ index_obj = atct_tool.getIndex(indexId)
 allowed_criteria = index_obj.criteria
 
 if not supported or criterion_type not in allowed_criteria:
-    msg = 'Criterion of type ' +\
-          '"%s" not added, it does not work with index "%s".' % (criterion_type, indexId)
-    return state.set(status='failure', portal_status_message=msg )
+    msg = _(u'Criterion of type '
+            '${type} not added, it does not work with index ${index}.',
+            mapping={'type' : criterion_type, 'index' : indexId})
+    context.plone_utils.addPortalMessage(msg)
+    return state.set(status='failure')
 else:
     return state.set(status='success')
