@@ -1,6 +1,10 @@
 1.2.0-devel unreleased
 ======================
 
+ * Reworked i18n of Python scripts to use the new MessageFactory and based
+   portal status messages on the statusmessages product.
+   [hannosch] 
+
  * Changed criteria definitions to use Zope3 Messages for localizing
    descriptions and labels instead of the old Archetypes approach using special
    attributes. Added a ATCTMessageFactory for the Messages in the
